GoalsOverPeriod/widget.css
* {
    font-family: '{fontName}', sans-serif;
    font-weight: {fontWeight};
}

.meter {
    display: {displayBar};
    height: {barHeight}px;
    position: relative;
    background: {{backgroundColor}};
    -moz-border-radius: 25px;
    -webkit-border-radius: 25px;
    border-radius: 25px;
    padding: 0px;
    box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
    overflow: hidden;
    -webkit-mask-position: center center;
    mask-position: center center;
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    -webkit-mask-size: 100% 100%;
    mask-size: 100% 100%;
}

.meter > span {
    display: {displayBar};
    height: 100%;
    max-height: 100%;
    border-radius: 25px;
    background-color: {{barColor1}};
    background-image: linear-gradient(
        center bottom,
        {{barColor1}} 37%,
        {{barColor2}} 69%
    );
    background-position: left center;
    position: absolute;
    overflow: hidden;
}

.meter > span.rtl {
    right: 0;
}

.meter > span.btt {
    width: 100%;
    height: 0;
    bottom: 0;
}

.meter > span.ttb {
    width: 100%;
    height: 0;
}

.meter > span:after {
    content: "";
    position: absolute;
    top: 0; left: 0; bottom: 0; right: 0;
    background-image: linear-gradient(
        -45deg,
        {{barColor2}} 25%,
        transparent 25%,
        transparent 50%,
        {{barColor2}} 50%,
        {{barColor2}} 75%,
        transparent 75%,
        transparent
    );
    z-index: 1;
    background-size: 50px 50px;
    border-radius:25px;
    overflow: hidden;
}

.meter.image > span {
    background-color: transparent;
}

.meter.image > span:after {
    background-image: url({{fillImage}});
    background-size: cover;
    background-position: left center;
}

.meter > span.rtl:after {
    background-position: right center;
}

.meter > span.btt:after {
    background-position: bottom center;
}

.meter > span.ttb:after {
    background-position: top center;
}

.legend{
    display:{displayLabels};
    width: 100%;
    font-size:{{labelSize}}px;
    text-align:center;
    font-weight:bold;
}

.title {
    width: 100%;
    font-size: {{titleSize}}px;
    color: {{titleColor}};
    text-align: center;
    font-weight: bold;
    display: none;
}

.title.top.top-show {
    display: block;
}

.title.bottom.bottom-show {
    display: block;
}

.title.top.on-top {
    display: block;
    position: absolute;
    left: {{titleOnTopLeft}}px;
    right: {{titleOnTopRight}}px;
    top: {{titleOnTopTop}}px;
    bottom: {{titleOnTopBottom}}px;
}

#count{
    color: {{valueColor}};
}

#divider{
    color: {{dividerColor}};
}

#goal{
    color: {{goalColor}};
}

